--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -168,7 +168,7 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="typography.html" class="nav-link"><img src="../static/img/side-nav/document.png" alt="">Company</a>
+                                        <a class="nav-link"><img src="../static/img/side-nav/document.png" alt="">Company</a>
                                         <span class="icon"><i class="arrow_carrot-down"></i></span>
                                         <ul class="list-unstyled dropdown_nav">
                                             <li><a href="/about-us">About Us</a></li>
@@ -178,21 +178,12 @@
                                 </ul>
                                 <ul class="list-unstyled nav-sidebar coding_nav">
                                     <li class="nav-item">
-                                        <a href="/signin" class="nav-link"><img src="../static/img/side-nav/account.png" alt="">Account</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link"><img src="../static/img/side-nav/coding.png" alt="">Development</a>
+                                        <a href="/profile" class="nav-link"><img src="../static/img/side-nav/account.png" alt="">Account</a>
                                     </li>
                                 </ul>
                                 <ul class="list-unstyled nav-sidebar bottom_nav">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link"><img src="../static/img/side-nav/united-states.png" alt="">Unlted States</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link"><img src="../static/img/side-nav/edit.png" alt="">English </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link"><img src="../static/img/side-nav/users.png" alt="">Sign In <i class="arrow_right"></i></a>
+                                        <a href="/signin" class="nav-link"><img src="../static/img/side-nav/users.png" alt="">Sign In <i class="arrow_right"></i></a>
                                     </li>
                                 </ul>
                             </div>
