--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -186,7 +186,7 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="/index">Home</a></li>
-                                <li class="breadcrumb-item"><a href="#">Forum</a></li>
+                                <li class="breadcrumb-item">Forum</li>
                                 </ol>
                         </nav>
                     </div>
@@ -208,7 +208,7 @@
 
                                 <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#" onclick="scrollToPosts()">Getting Started</a></h3>
-                                    <p class="total-post">453 Posts</p>
+                                    <p class="total-post">Join the forum!</p>
                                 </div>
                                 <!-- /.HerBlossom-com-box-content -->
                             </div>
@@ -221,7 +221,7 @@
 
                                 <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#" onclick="scrollToRanking()">Ranking List</a></h3>
-                                    <p class="total-post">624 Posts</p>
+                                    <p class="total-post">Give a like!</p>
                                 </div>
                                 <!-- /.HerBlossom-com-box-content -->
                             </div>
@@ -234,7 +234,7 @@
 
                                 <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#" onclick="scrollToTags()">Tags</a></h3>
-                                    <p class="total-post">120 Posts</p>
+                                    <p class="total-post">Filter tags!</p>
                                 </div>
                                 <!-- /.HerBlossom-com-box-content -->
                             </div>
@@ -247,7 +247,7 @@
 
                                 <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="/blog-list">Blogs</a></h3>
-                                    <p class="total-post">235 Posts</p>
+                                    <p class="total-post">View blogs!</p>
                                 </div>
                                 <!-- /.HerBlossom-com-box-content -->
                             </div>
@@ -472,7 +472,7 @@
     <script src="../static/js/change-button.js"></script>
 </body>
 <script>
-    const postsPerPage = 4;
+    const postsPerPage = 3;
     let allPosts = [];
     let currentPage = 1;
 
