--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -78,7 +78,7 @@
                                aria-haspopup="true" aria-expanded="false">Blog</a>
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                            <a href="/job-recommendation" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">Job Recommendation</a>
                         </li>
                         <li class="nav-item dropdown submenu">
@@ -129,8 +129,8 @@
                     <div class="col-sm-7">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item"><a href="#">Blog</a></li>
+                                <li class="breadcrumb-item"><a href="/index">Home</a></li>
+                                <li class="breadcrumb-item"><a href="/forum-topics">Forum</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Edit Your Post</li>
                             </ol>
                         </nav>
@@ -178,14 +178,10 @@
                                 </ul>
                                 <ul class="list-unstyled nav-sidebar coding_nav">
                                     <li class="nav-item">
-                                        <a href="/profile" class="nav-link"><img src="../static/img/side-nav/account.png" alt="">Account</a>
+                                        <a href="/profile" class="nav-link"><img src="../static/img/side-nav/account.png" alt="">Account / Sign In</a>
                                     </li>
                                 </ul>
-                                <ul class="list-unstyled nav-sidebar bottom_nav">
-                                    <li class="nav-item">
-                                        <a href="/signin" class="nav-link"><img src="../static/img/side-nav/users.png" alt="">Sign In <i class="arrow_right"></i></a>
-                                    </li>
-                                </ul>
+
                             </div>
                         </aside>
                     </div>
